--- a/lightGBM_v2.ipynb
+++ b/lightGBM_v2.ipynb
@@ -229,6 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Groupby: Statistics for applications in the same group\n",
     "group = ['ORGANIZATION_TYPE', 'NAME_EDUCATION_TYPE', 'OCCUPATION_TYPE', 'AGE_RANGE', 'CODE_GENDER']\n",
     "data = do_median(data, group, 'EXT_SOURCES_MEAN', 'GROUP_EXT_SOURCES_MEDIAN')\n",
     "data = do_std(data, group, 'EXT_SOURCES_MEAN', 'GROUP_EXT_SOURCES_STD')\n",
