--- a/lightGBM.ipynb
+++ b/lightGBM.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#initial EDA"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
