--- a/lightGBM_BasicFeatureSet_AggregatedSet.ipynb
+++ b/lightGBM_BasicFeatureSet_AggregatedSet.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# working model with basic features from application_train and previous applications"
+    "# working model with basic features from application_train and aggregated features"
    ]
   },
   {
