--- a/lightGBM_BasicFeatureSet.ipynb
+++ b/lightGBM_BasicFeatureSet.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# working model with basic features from application_train"
+    "# working model with basic features from application_train.csv"
    ]
   },
   {
