--- a/lightGBM_BasicFeatureSet_AggregatedSet.ipynb
+++ b/lightGBM_BasicFeatureSet_AggregatedSet.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# working model with basic features from application_train and aggregated features"
+    "working model with basic and aggregated features from application_train.csv"
    ]
   },
   {
