--- a/lightGBM_ApplicationFeatureSet_EARFeatureSet.ipynb
+++ b/lightGBM_ApplicationFeatureSet_EARFeatureSet.ipynb
@@ -1582,6 +1582,423 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MEAN_ACTUAL_EAR</th>\n",
+       "      <th>MEAN_EXPECTED_EAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>307511</th>\n",
+       "      <td>0.272618</td>\n",
+       "      <td>1.199400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307512</th>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.516463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307513</th>\n",
+       "      <td>0.085821</td>\n",
+       "      <td>0.548859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307514</th>\n",
+       "      <td>0.216025</td>\n",
+       "      <td>0.107648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307515</th>\n",
+       "      <td>1.149183</td>\n",
+       "      <td>0.757520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307516</th>\n",
+       "      <td>0.625341</td>\n",
+       "      <td>0.404926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307517</th>\n",
+       "      <td>-0.264730</td>\n",
+       "      <td>0.311126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307518</th>\n",
+       "      <td>0.620921</td>\n",
+       "      <td>0.252725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307519</th>\n",
+       "      <td>0.271490</td>\n",
+       "      <td>0.254882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307520</th>\n",
+       "      <td>0.223434</td>\n",
+       "      <td>0.358676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307521</th>\n",
+       "      <td>0.277430</td>\n",
+       "      <td>0.262445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307522</th>\n",
+       "      <td>0.024220</td>\n",
+       "      <td>0.158869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307523</th>\n",
+       "      <td>0.341224</td>\n",
+       "      <td>0.101625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307524</th>\n",
+       "      <td>0.522826</td>\n",
+       "      <td>0.558974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307525</th>\n",
+       "      <td>0.421904</td>\n",
+       "      <td>0.229500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307526</th>\n",
+       "      <td>2.157846</td>\n",
+       "      <td>0.293929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307527</th>\n",
+       "      <td>0.689117</td>\n",
+       "      <td>0.232734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307528</th>\n",
+       "      <td>0.073358</td>\n",
+       "      <td>0.893839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307529</th>\n",
+       "      <td>0.433486</td>\n",
+       "      <td>0.421400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307530</th>\n",
+       "      <td>0.595394</td>\n",
+       "      <td>0.546090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307531</th>\n",
+       "      <td>0.955667</td>\n",
+       "      <td>0.501728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307532</th>\n",
+       "      <td>-0.198002</td>\n",
+       "      <td>0.198456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307533</th>\n",
+       "      <td>-0.361817</td>\n",
+       "      <td>0.085413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307534</th>\n",
+       "      <td>0.960805</td>\n",
+       "      <td>0.375131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307535</th>\n",
+       "      <td>1.030830</td>\n",
+       "      <td>0.923786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307536</th>\n",
+       "      <td>-0.701795</td>\n",
+       "      <td>0.298076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307537</th>\n",
+       "      <td>0.521730</td>\n",
+       "      <td>0.294983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307538</th>\n",
+       "      <td>0.273467</td>\n",
+       "      <td>0.112086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307539</th>\n",
+       "      <td>-0.053119</td>\n",
+       "      <td>0.301040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307540</th>\n",
+       "      <td>0.321568</td>\n",
+       "      <td>0.140336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356225</th>\n",
+       "      <td>0.746785</td>\n",
+       "      <td>0.434536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356226</th>\n",
+       "      <td>0.197390</td>\n",
+       "      <td>0.188008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356227</th>\n",
+       "      <td>0.064993</td>\n",
+       "      <td>0.337769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356228</th>\n",
+       "      <td>0.682457</td>\n",
+       "      <td>0.220517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356229</th>\n",
+       "      <td>-0.022476</td>\n",
+       "      <td>0.143514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356230</th>\n",
+       "      <td>4.881709</td>\n",
+       "      <td>0.406071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356231</th>\n",
+       "      <td>0.343333</td>\n",
+       "      <td>0.318062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356232</th>\n",
+       "      <td>0.563049</td>\n",
+       "      <td>0.365508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356233</th>\n",
+       "      <td>-0.269162</td>\n",
+       "      <td>0.157155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356234</th>\n",
+       "      <td>3.554346</td>\n",
+       "      <td>1.032836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356235</th>\n",
+       "      <td>1.066191</td>\n",
+       "      <td>0.645954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356236</th>\n",
+       "      <td>0.586973</td>\n",
+       "      <td>0.575215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356237</th>\n",
+       "      <td>0.247121</td>\n",
+       "      <td>0.503171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356238</th>\n",
+       "      <td>0.365151</td>\n",
+       "      <td>0.231163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356239</th>\n",
+       "      <td>0.405107</td>\n",
+       "      <td>0.292038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356240</th>\n",
+       "      <td>-0.374381</td>\n",
+       "      <td>0.244952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356241</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356242</th>\n",
+       "      <td>-0.003943</td>\n",
+       "      <td>0.235293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356243</th>\n",
+       "      <td>-0.206269</td>\n",
+       "      <td>0.182069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356244</th>\n",
+       "      <td>0.150595</td>\n",
+       "      <td>0.261613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356245</th>\n",
+       "      <td>0.666966</td>\n",
+       "      <td>0.190228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356246</th>\n",
+       "      <td>0.341855</td>\n",
+       "      <td>0.440057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356247</th>\n",
+       "      <td>0.542720</td>\n",
+       "      <td>0.241454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356248</th>\n",
+       "      <td>-0.132649</td>\n",
+       "      <td>0.114164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356249</th>\n",
+       "      <td>-0.191081</td>\n",
+       "      <td>0.656443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356250</th>\n",
+       "      <td>0.374381</td>\n",
+       "      <td>0.343031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356251</th>\n",
+       "      <td>0.703361</td>\n",
+       "      <td>0.632791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356252</th>\n",
+       "      <td>-0.705202</td>\n",
+       "      <td>0.405185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356253</th>\n",
+       "      <td>0.519875</td>\n",
+       "      <td>0.631515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356254</th>\n",
+       "      <td>-0.223290</td>\n",
+       "      <td>0.284694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>48744 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        MEAN_ACTUAL_EAR  MEAN_EXPECTED_EAR\n",
+       "307511         0.272618           1.199400\n",
+       "307512        -1.000000           0.516463\n",
+       "307513         0.085821           0.548859\n",
+       "307514         0.216025           0.107648\n",
+       "307515         1.149183           0.757520\n",
+       "307516         0.625341           0.404926\n",
+       "307517        -0.264730           0.311126\n",
+       "307518         0.620921           0.252725\n",
+       "307519         0.271490           0.254882\n",
+       "307520         0.223434           0.358676\n",
+       "307521         0.277430           0.262445\n",
+       "307522         0.024220           0.158869\n",
+       "307523         0.341224           0.101625\n",
+       "307524         0.522826           0.558974\n",
+       "307525         0.421904           0.229500\n",
+       "307526         2.157846           0.293929\n",
+       "307527         0.689117           0.232734\n",
+       "307528         0.073358           0.893839\n",
+       "307529         0.433486           0.421400\n",
+       "307530         0.595394           0.546090\n",
+       "307531         0.955667           0.501728\n",
+       "307532        -0.198002           0.198456\n",
+       "307533        -0.361817           0.085413\n",
+       "307534         0.960805           0.375131\n",
+       "307535         1.030830           0.923786\n",
+       "307536        -0.701795           0.298076\n",
+       "307537         0.521730           0.294983\n",
+       "307538         0.273467           0.112086\n",
+       "307539        -0.053119           0.301040\n",
+       "307540         0.321568           0.140336\n",
+       "...                 ...                ...\n",
+       "356225         0.746785           0.434536\n",
+       "356226         0.197390           0.188008\n",
+       "356227         0.064993           0.337769\n",
+       "356228         0.682457           0.220517\n",
+       "356229        -0.022476           0.143514\n",
+       "356230         4.881709           0.406071\n",
+       "356231         0.343333           0.318062\n",
+       "356232         0.563049           0.365508\n",
+       "356233        -0.269162           0.157155\n",
+       "356234         3.554346           1.032836\n",
+       "356235         1.066191           0.645954\n",
+       "356236         0.586973           0.575215\n",
+       "356237         0.247121           0.503171\n",
+       "356238         0.365151           0.231163\n",
+       "356239         0.405107           0.292038\n",
+       "356240        -0.374381           0.244952\n",
+       "356241              NaN                NaN\n",
+       "356242        -0.003943           0.235293\n",
+       "356243        -0.206269           0.182069\n",
+       "356244         0.150595           0.261613\n",
+       "356245         0.666966           0.190228\n",
+       "356246         0.341855           0.440057\n",
+       "356247         0.542720           0.241454\n",
+       "356248        -0.132649           0.114164\n",
+       "356249        -0.191081           0.656443\n",
+       "356250         0.374381           0.343031\n",
+       "356251         0.703361           0.632791\n",
+       "356252        -0.705202           0.405185\n",
+       "356253         0.519875           0.631515\n",
+       "356254        -0.223290           0.284694\n",
+       "\n",
+       "[48744 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[['MEAN_ACTUAL_EAR', 'MEAN_EXPECTED_EAR']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
