--- a/lightGBM_BasicFeatureSet.ipynb
+++ b/lightGBM_BasicFeatureSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/envs/nlp/lib/python3.7/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
+      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
+      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
+      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +98,7 @@
        "((356255, 121), (307511, 121), (48744, 121))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +295,7 @@
        "((356255, 277), (307511, 277), (48744, 277))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -361,45 +373,41 @@
      "output_type": "stream",
      "text": [
       "Training until validation scores don't improve for 40 rounds.\n",
-      "[10]\tvalid_0's auc: 0.743037\n",
-      "[20]\tvalid_0's auc: 0.747684\n",
-      "[30]\tvalid_0's auc: 0.750724\n",
-      "[40]\tvalid_0's auc: 0.753673\n",
-      "[50]\tvalid_0's auc: 0.756442\n",
-      "[60]\tvalid_0's auc: 0.758651\n",
-      "[70]\tvalid_0's auc: 0.760803\n",
-      "[80]\tvalid_0's auc: 0.762471\n",
-      "[90]\tvalid_0's auc: 0.763735\n",
-      "[100]\tvalid_0's auc: 0.764908\n",
-      "[110]\tvalid_0's auc: 0.765728\n",
-      "[120]\tvalid_0's auc: 0.766569\n",
-      "[130]\tvalid_0's auc: 0.767286\n",
-      "[140]\tvalid_0's auc: 0.767723\n",
-      "[150]\tvalid_0's auc: 0.768094\n",
-      "[160]\tvalid_0's auc: 0.768713\n",
-      "[170]\tvalid_0's auc: 0.768966\n",
-      "[180]\tvalid_0's auc: 0.769358\n",
-      "[190]\tvalid_0's auc: 0.769622\n",
-      "[200]\tvalid_0's auc: 0.770016\n",
-      "[210]\tvalid_0's auc: 0.770094\n",
-      "[220]\tvalid_0's auc: 0.770257\n",
-      "[230]\tvalid_0's auc: 0.770363\n",
-      "[240]\tvalid_0's auc: 0.770516\n",
-      "[250]\tvalid_0's auc: 0.770499\n",
-      "[260]\tvalid_0's auc: 0.770752\n",
-      "[270]\tvalid_0's auc: 0.770888\n",
-      "[280]\tvalid_0's auc: 0.77095\n",
-      "[290]\tvalid_0's auc: 0.770917\n",
-      "[300]\tvalid_0's auc: 0.771043\n",
-      "[310]\tvalid_0's auc: 0.770924\n",
-      "[320]\tvalid_0's auc: 0.770886\n",
-      "[330]\tvalid_0's auc: 0.771054\n",
-      "[340]\tvalid_0's auc: 0.771065\n",
-      "[350]\tvalid_0's auc: 0.771007\n",
-      "[360]\tvalid_0's auc: 0.770979\n",
-      "[370]\tvalid_0's auc: 0.770978\n",
+      "[10]\tvalid_0's auc: 0.7333\n",
+      "[20]\tvalid_0's auc: 0.738656\n",
+      "[30]\tvalid_0's auc: 0.743285\n",
+      "[40]\tvalid_0's auc: 0.746736\n",
+      "[50]\tvalid_0's auc: 0.749598\n",
+      "[60]\tvalid_0's auc: 0.752193\n",
+      "[70]\tvalid_0's auc: 0.754441\n",
+      "[80]\tvalid_0's auc: 0.755879\n",
+      "[90]\tvalid_0's auc: 0.756874\n",
+      "[100]\tvalid_0's auc: 0.757755\n",
+      "[110]\tvalid_0's auc: 0.758369\n",
+      "[120]\tvalid_0's auc: 0.75903\n",
+      "[130]\tvalid_0's auc: 0.759818\n",
+      "[140]\tvalid_0's auc: 0.760121\n",
+      "[150]\tvalid_0's auc: 0.760547\n",
+      "[160]\tvalid_0's auc: 0.760992\n",
+      "[170]\tvalid_0's auc: 0.761258\n",
+      "[180]\tvalid_0's auc: 0.761573\n",
+      "[190]\tvalid_0's auc: 0.761864\n",
+      "[200]\tvalid_0's auc: 0.761954\n",
+      "[210]\tvalid_0's auc: 0.762055\n",
+      "[220]\tvalid_0's auc: 0.762105\n",
+      "[230]\tvalid_0's auc: 0.76223\n",
+      "[240]\tvalid_0's auc: 0.762483\n",
+      "[250]\tvalid_0's auc: 0.762398\n",
+      "[260]\tvalid_0's auc: 0.762489\n",
+      "[270]\tvalid_0's auc: 0.762623\n",
+      "[280]\tvalid_0's auc: 0.762668\n",
+      "[290]\tvalid_0's auc: 0.762743\n",
+      "[300]\tvalid_0's auc: 0.762668\n",
+      "[310]\tvalid_0's auc: 0.762654\n",
+      "[320]\tvalid_0's auc: 0.762646\n",
+      "[330]\tvalid_0's auc: 0.762698\n",
       "Early stopping, best iteration is:\n",
-      "[332]\tvalid_0's auc: 0.771088\n"
+      "[294]\tvalid_0's auc: 0.762785\n"
      ]
     }
    ],
@@ -416,17 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[56501,    77],\n",
-       "       [ 4804,   121]])"
+       "0.5104005161100934"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +445,10 @@
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(valid_y, p_validy)\n",
-    "cm"
+    "cm\n",
+    "\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "roc_auc_score(valid_y, p_validy)"
    ]
   },
   {
